[package]
name = "otp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75" }
clap = { version = "4.4.5", features = ["derive"] }
data-encoding = "2.4.0"
orion = { version = "0.17.6", features = ["safe_api"] }
ring = "0.16.20"
