[package]
name = "stockholm"
version = "0.1.0"
edition = "2021"
description = "ransomware on ~/infection"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
hex = "0.4.3"
rand = "0.8.5"
simple_crypt = "0.2.3"
walkdir = "2.4.0"
