[package]
name = "vaccine"
version = "0.1.0"
edition = "2021"
description = "basic sql injection detection tool"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
august = "2.4.0"
clap = { version = "4.4.18", features = ["derive"] }
difflib = "0.4.0"
log2 = "0.1.10"
strum = { version = "0.26.1", features = ["derive"] }
tl = "0.7.8"
ureq = "2.9.4"
url = "^2.3.1"
